Fixed: Alignment of query button in keyboard page.

--- a/resources/installer/css/welcome.css
+++ b/resources/installer/css/welcome.css
@@ -163,18 +163,18 @@
 .Query ul li {
     float:left;
     font-size:14px;
-    margin:6px;
+    margin:4px;
     width:14px;
     height:14px;
     line-height:14px;
     text-align:center;
+    border: 2px solid transparent;
 }
 
 .LetterActive {
     background:transparent;
-    border:solid 2px rgba(255,255,3,0.5);
+    border:solid 2px rgba(255,255,3,0.5) !important;
     border-radius:50%;
-    margin:2px 6px 6px 6px;
 }
 
 .Query .QueryWrap {
